--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,8 @@
-* {
-    
+*{
     color: hsl(200, 15%, 8%);
     font-family: 'Nunito Sans', sans-serif;
     margin: 0;
     padding: 0;
     outline: none;
     box-sizing: border-box;
-
-}
-
-body {
-    min-height: 100vh;
 }
